# juzi

./: .gitignore  README.md  justfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: docs.md
juzi/: __init__.py  data.py  types.py
juzi/cs/: __init__.py  _cluster.py  _nmf.py  _prune.py  _similarity.py  cluster.py  nmf.py  tools.py
juzi/ct/: models.py
juzi/mg/: __init__.py  cancer_breast.json  cancer_pathways.json  cell_cycle.json
src/juzi/: __init__.py
src/juzi/gp/: __init__.py  _aggregate.py  _annotate.py  _associate.py  _cluster.py  _jackknife.py  _nmf.py  _plot.py  _prune.py  _score.py  _similarity.py  _stability.py
src/juzi/mg/: 3CA.json  __init__.py  _read.py  _sets.py
src/juzi/pl/: __init__.py  _annotate.py  _associate.py  _cluster.py  _genes.py  _heatmap.py  _jackknife.py  _loadings.py  _samples.py  _score.py  _similarity.py  _stability.py
src/juzi/ut/: __init__.py  _factors.py  _programs.py
src/tests/: conftest.py  test_aggregate.py  test_annotate.py  test_associate.py  test_cluster.py  test_jackknife.py  test_nmf.py  test_plot.py  test_prune.py  test_score.py  test_similarity.py  test_stability.py  test_utils.py
tests/: test_cluster.py  test_nmf.py  test_prune.py  test_similarity.py
