[project]
name = "juzi"
version = "0.1.3"
description = "juzi"
authors = [{ name="Tom W. Ouellette" } ]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "anndata",
  "torch",
  "numpy",
  "scipy",
  "tqdm",
  "matplotlib",
  "joblib",
  "glasbey"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/tomouellette/juzi"
Issues = "https://github.com/tomouellette/juzi/issues"
