[project]
name = "juzi"
version = "0.3.5"
description = "Detecting and analyzing recurrent gene programs in single-cell data"
readme = "README.md"
authors = [
    { name = "Tom Ouellette", email = "touellette112@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.2",
    "numpy>=2.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
    "statsmodels",
    "matplotlib",
    "joblib",
    "glasbey",
    "juzi",
    "scikit-learn",
]

[tool.setuptools]
exclude-package-data = { "" = ["src/tests/data/*"] }

[dependency-groups]
docs = [
    "zensical>=0.0.5",
]
dev = [
    "pytest>=8.3.5",
	"numpydoc"
]

[project.scripts]
ginseng = "ginseng:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# F722 ignores forward annotation syntax rules (e.g in anci.Arg)
ignore = ["F722"]  

[tool.ruff.lint]
# E402 is "Module level import not at top of file"
per-file-ignores = { "__init__.py" = ["E402"] }

[tool.uv.sources]
juzi = { workspace = true }
